tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/gateway/wildcard_hostname/to_b/_test_context/VirtualService-Gateway.4294426158.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-98059
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*.example.com'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wild.example.com
  namespace: echo-2-98059
spec:
  gateways:
  - gateway
  hosts:
  - '*.example.com'
  http:
  - route:
    - destination:
        host: b.echo-2-98059.svc.cluster.local
        port:
          number: 80
